fix container alignment

--- a/style.css
+++ b/style.css
@@ -95,17 +95,21 @@ body html{
 
 .flexbox{
    display: flex;
-   flex-wrap: wrap;
+   justify-content: flex-start;
+   align-items: flex-start;
+   flex-wrap:wrap;
    position: center;
    width: 100%; 
 }
 
 .container2{
+    border-radius: 50px;
     width: 50%;
     height: 100%;
     margin:0;
     padding: 0;
     opacity: 0.5;
+    align-content: center;
 }
 
 .container2:hover {
@@ -113,8 +117,7 @@ body html{
 }
 
 .container3{
-    width: 50%;
-    height: 100%;
+    margin:0;
     margin:0;
     padding: 0;
     opacity: 0.5;
